--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -12,6 +12,6 @@ body {
 }
 
 .navbar img {
-  width: 150px; /* 원하는 크기로 설정 */
-  height: auto; /* 이미지의 비율을 유지 */
+  width: 150px; 
+  height: auto;
 }
