--- a/portfolio-react/src/Components/Hero/Hero.css
+++ b/portfolio-react/src/Components/Hero/Hero.css
@@ -20,7 +20,47 @@
     font-weight: 600;
 }
 
-.hero p {
+.hero p{
     text-align: center; 
     line-height: 1.6; 
+    width: 50%;
+    font-size: 18px;
+}
+
+.hero h1 span{
+    background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hero-action {
+    display: flex;
+    align-items: center;
+    gap:25px;
+    font-size:24px;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+
+.hero-connect {
+    padding: 25px 45px;
+    border-radius: 50px;
+    background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
+    cursor: pointer;
+}
+
+.hero-resume {
+    padding: 25px 75px;
+    border-radius: 50px;
+    border: 3px solid white;
+    cursor: pointer;
+}
+
+.hero-connect:hover {
+    border: 2px solid white;
+}
+
+.hero-resume:hover {
+    border-color:#B415FF;
 }
