--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -6,8 +6,8 @@
 body {
   height: 100vh;
   /* background: black; */
-  background: #161513;
-  color: white;
+  background: #fdf6ec;
+  color: #DD7C73;
   font-family: 'outfit';
 }
 
