--- a/portfolio-react/src/Components/Hero/Hero.css
+++ b/portfolio-react/src/Components/Hero/Hero.css
@@ -2,7 +2,7 @@
     width: 250px; 
     height: auto;
     /* margin-top: 150px; */
-    margin-top: 100px;
+    margin-top: 50px;
 
 }
 
@@ -10,57 +10,59 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap:35px;
+    gap:20px;
 }
 
 .hero h1{
     text-align: center;
     width: 70%;
-    font-size: 80px;
+    font-size: 70px;
     font-weight: 600;
 }
 
 .hero p{
     text-align: center; 
-    line-height: 1.6; 
+    line-height: 1.3; 
     width: 50%;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .hero h1 span{
-    background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
+    /* background: linear-gradient(300deg, #faaca8, #ddd6f3, #C6DAE0); */
+    background: linear-gradient(300deg, #fa7268, #ffb6c1, #c1b6f8, #89c2d9);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
+
 .hero-action {
     display: flex;
     align-items: center;
     gap:25px;
-    font-size:24px;
+    font-size:18px;
     font-weight: 500;
     margin-bottom: 50px;
 }
 
 .hero-connect {
-    padding: 25px 45px;
+    padding: 15px 35px;
     border-radius: 50px;
-    background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
+    background: linear-gradient(20deg, #ffb3b8, #e6f7ff);
     cursor: pointer;
 }
 
 .hero-resume {
-    padding: 25px 75px;
+    padding: 15px 65px;
     border-radius: 50px;
-    border: 3px solid white;
+    border: 3px solid  #e99994;
     cursor: pointer;
 }
 
 .hero-connect:hover {
-    border: 2px solid white;
+    border: 2px solid  #fa7268;
 }
 
 .hero-resume:hover {
-    border-color:#B415FF;
+    border-color: #c1b6f8;
 }
