--- a/portfolio-react/src/Components/Navbar/Navbar.css
+++ b/portfolio-react/src/Components/Navbar/Navbar.css
@@ -14,10 +14,10 @@
 }
 
 .nav-connect{
-    padding: 20px 40px;
+    padding: 15px 30px;
     border-radius: 50px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
-    font-size: 22px;
+    background: linear-gradient(20deg, #ffb3b8, #e6f7ff);
+    font-size:18px;
     cursor: pointer;
     transition: 0.5s;
 }
