--- a/portfolio-react/src/Components/MyWork/MyWork.css
+++ b/portfolio-react/src/Components/MyWork/MyWork.css
@@ -33,3 +33,16 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap:40px;
 }
+
+.mywork-container img{
+    box-sizing: border-box;
+    width: 419px;
+    height: 280px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.mywork-container img:hover{
+    transform: scale(1.10);
+    transition: 0.3s;
+}
