--- a/portfolio-react/src/Components/Navbar/Navbar.css
+++ b/portfolio-react/src/Components/Navbar/Navbar.css
@@ -21,11 +21,13 @@
 
 .nav-connect{
     padding: 12px 25px;
+    color: #cb4336;
     border-radius: 50px;
     background: linear-gradient(20deg, #ffb3b8, #e6f7ff);
     font-size:16px;
     cursor: pointer;
     transition: 0.5s;
+    font-weight: 350;
 }
 
 .nav-connect:hover {
