--- a/portfolio-react/src/Components/Navbar/Navbar.css
+++ b/portfolio-react/src/Components/Navbar/Navbar.css
@@ -33,3 +33,17 @@
 .nav-connect:hover {
     transform: scale(1.05);
 }
+
+.nav-menu li p {
+    transition: color 0.3s ease;
+}
+  
+  .nav-menu li.active p {
+    color:#c1b6f8; 
+    font-weight: bold; 
+  }
+  
+.nav-menu li p:hover{
+    transform: scale(1.1);
+    transition: 0.4s;
+}
