--- a/portfolio-react/src/Components/Navbar/Navbar.css
+++ b/portfolio-react/src/Components/Navbar/Navbar.css
@@ -47,3 +47,15 @@
     transform: scale(1.1);
     transition: 0.4s;
 }
+
+.nav-menu li{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.anchor-link{
+    text-decoration: none;
+    color: #DD7C73;
+}
