--- a/portfolio-react/src/Components/About/About.css
+++ b/portfolio-react/src/Components/About/About.css
@@ -129,3 +129,56 @@
     transform: scale(1.12);
     transition: 0.5s;
 }
+
+@media(max-width:768px){
+    .about{
+        gap:80px;
+        margin: 50px 35px;
+        align-items: start;
+    }
+
+    .about-title h1{
+        font-size: 35px;
+        padding:  0px;
+    }
+
+    .about-title img{
+        width:250px;
+        right:-50px;
+    }
+
+    .about-section {
+        flex-direction: column; /* 모바일에서는 세로 정렬 */
+        gap: 30px; /* 각 섹션 간 간격 */
+        align-items: center; /* 중앙 정렬 */
+    }
+
+    .about-left img {
+        width: 90%; /* 이미지 크기 조정 */
+        max-width: 300px; /* 최대 너비 제한 */
+        border-radius: 10px; /* 둥근 모서리 */
+        margin-top: -40px;
+    }
+
+    .about-para {
+        font-size: 16px; /* 글씨 크기 축소 */
+        line-height: 1.5; /* 줄 간격 조정 */
+    }
+
+    .about-skill {
+        text-align: center; /* 텍스트 중앙 정렬 */
+        gap: 10px;
+    }
+
+    .about-achievement h1 {
+        font-size: 25px; /* 글씨 크기 축소 */
+  
+    }
+
+    .about-achievement p {
+        font-size: 16px; /* 글씨 크기 축소 */
+        margin-right: 10px;
+        margin-left: 7px;
+    }
+
+}
