--- a/portfolio-react/src/Components/Footer/Footer.css
+++ b/portfolio-react/src/Components/Footer/Footer.css
@@ -37,3 +37,38 @@
     margin-bottom: 50px;
 }
 
+@media(max-width:768px){
+    .footer{
+        margin: 50px 35px;
+    }
+
+    .footer-top{
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .footer-top-left img {
+        display: block; /* inline 속성 제거 */
+        margin-left: -20px; /* 여백 제거 */
+        width: 30%; /* 로고 크기 조정 */
+        max-width: 150px; /* 최대 크기 제한 */
+        height: auto; /* 비율 유지 */
+        text-align: left; /* 텍스트 정렬 */
+    }
+
+    .footer-bottom {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-bottom: 50px;
+    }
+
+    .footer-top-left p{
+        font-size: 16px;
+    }
+
+    .footer-bottom-right p{
+        font-size: 16px;
+    }
+
+
+}
