--- a/portfolio-react/src/Components/Hero/Hero.css
+++ b/portfolio-react/src/Components/Hero/Hero.css
@@ -71,3 +71,39 @@
 .hero-resume:hover {
     border-color: #c1b6f8;
 }
+
+@media(max-width:768px){
+
+    .hero h1{
+        margin-top: 30px;
+        width: 90%;
+        font-size: 40px;
+    }
+
+    .hero p{
+        width: 70%;
+        font-size: 16px;
+        line-height: 32px;
+        margin:10px 0px;
+    }
+
+    .hero img{
+        width:50%;
+    }
+
+    .hero-action{
+        gap:16px;
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 50px;  
+    }
+
+    .hero-connect{
+        padding: 8px 15px;
+    }
+
+    .hero-resume{
+        padding: 8px 30px;
+        border-width: 2px;
+    }
+}
