--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -178,6 +178,7 @@
     .contact-submit{
         font-size: 18px;
         padding: 10px 30px;
+        font-weight: 200; /* 글씨 두께를 얇게 */
     }
 
 }
